Test cases of SecurityCodeActivity added

--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -36,7 +36,7 @@ android {
     }
     buildTypes {
         debug {
-            //testCoverageEnabled true
+            testCoverageEnabled true
             multiDexEnabled true
             versionNameSuffix " Debug"
             debuggable true
